fixed web modules to generate proper dependencies, removed some unused dependencies